--- a/imports/ui/task.html
+++ b/imports/ui/task.html
@@ -5,7 +5,7 @@
     <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
 
     {{#if isOwner}}
-      <button class="toggle-private">
+      <button class="btn btn-primary btn-xs toggle-private">
         {{#if private}}
           Private
         {{else}}
